--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       color: #ff4d88;
       z-index: 2;
       position: relative;
-      margin-bottom: 30px; /* space below title for the image */
+      margin-bottom: 40px; /* more space for image */
     }
 
     #image-container {
@@ -33,14 +33,14 @@
     img {
       width: 200px;
       transition: transform 0.3s ease;
-      margin-top: 20px; /* space from title */
+      margin-top: 20px; /* keep space from title */
     }
 
     #buttons {
       position: relative;
       z-index: 2;
       margin-top: 20px;
-      height: 60px; /* reserve space for buttons */
+      height: 60px;
     }
 
     button {
@@ -52,7 +52,7 @@
       transition: transform 0.2s ease;
       position: absolute;
       white-space: nowrap;
-      min-width: 80px; /* makes button rectangle, not huge */
+      min-width: 80px; /* rectangle */
     }
 
     #yesBtn {
@@ -72,6 +72,8 @@
       font-size: 1.8rem;
       margin-top: 20px;
       color: #ff3385;
+      position: relative;
+      z-index: 2;
     }
 
     #whyText {
@@ -79,6 +81,8 @@
       color: #cc0066;
       margin-top: 10px;
       min-height: 24px;
+      position: relative;
+      z-index: 2;
     }
 
     .confetti {
@@ -136,15 +140,19 @@
 
   let reasonIndex = 0;
 
-  // Safe area for No button
+  // Safe area for No button, now taking scaling into account
   function getSafeArea() {
     const titleHeight = document.querySelector('h1').offsetHeight + 30;
-    const btnHeight = 60;
-    const margin = 30; // bigger margin so button doesn't touch edges
+    const bottomMargin = 150; // reserve space for message and buttons
+    const margin = 30;
+
+    const scaledWidth = noBtn.offsetWidth * noScale;
+    const scaledHeight = noBtn.offsetHeight * noScale;
+
     const minX = margin;
-    const maxX = window.innerWidth - noBtn.offsetWidth - margin;
+    const maxX = window.innerWidth - scaledWidth - margin;
     const minY = titleHeight;
-    const maxY = window.innerHeight - btnHeight - noBtn.offsetHeight - margin;
+    const maxY = window.innerHeight - scaledHeight - bottomMargin;
     return { minX, maxX, minY, maxY };
   }
 
@@ -160,8 +168,9 @@
     imageScale += 0.15;
     noScale += 0.1;
 
-    imageScale = Math.min(imageScale, 2.2);
-    noScale = Math.min(noScale, 1.6);
+    // Cap sizes so nothing overlaps title or bottom
+    imageScale = Math.min(imageScale, 1.5); // smaller max scale
+    noScale = Math.min(noScale, 1.3); // smaller max scale
 
     minion.style.transform = `scale(${imageScale})`;
     noBtn.style.transform = `scale(${noScale})`;
@@ -196,7 +205,6 @@
     }
   }
 
-  // Keep No button in view on window resize
   window.addEventListener('resize', () => {
     moveNoButtonRandomly();
   });
