--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     h1 {
       font-size: 2.5rem;
       color: #ff4d88;
+      margin-bottom: 40px; /* space for image */
       z-index: 2;
       position: relative;
-      margin-bottom: 40px; /* more space for image */
     }
 
     #image-container {
@@ -31,9 +31,11 @@
     }
 
     img {
-      width: 200px;
-      transition: transform 0.3s ease;
-      margin-top: 20px; /* keep space from title */
+      width: 200px;           /* base width */
+      max-width: 80vw;        /* prevent overflowing screen */
+      transition: width 0.3s ease;
+      margin-top: 20px;       /* space from title */
+      display: block;
     }
 
     #buttons {
@@ -52,7 +54,7 @@
       transition: transform 0.2s ease;
       position: absolute;
       white-space: nowrap;
-      min-width: 80px; /* rectangle */
+      min-width: 80px; /* ensures rectangle shape */
     }
 
     #yesBtn {
@@ -119,7 +121,6 @@
 <audio id="popSound" src="pop.mp3"></audio>
 
 <script>
-  let imageScale = 1;
   let noScale = 1;
 
   const minion = document.getElementById("minion");
@@ -140,7 +141,7 @@
 
   let reasonIndex = 0;
 
-  // Safe area for No button, now taking scaling into account
+  // Safe area for No button (accounts for scaling)
   function getSafeArea() {
     const titleHeight = document.querySelector('h1').offsetHeight + 30;
     const bottomMargin = 150; // reserve space for message and buttons
@@ -162,26 +163,25 @@
     const y = Math.random() * (area.maxY - area.minY) + area.minY;
     noBtn.style.left = x + "px";
     noBtn.style.top = y + "px";
+    noBtn.style.transform = `scale(${noScale})`; // always keep scale applied
   }
 
   noBtn.addEventListener("click", () => {
-    imageScale += 0.15;
+    // Increase No button scale
     noScale += 0.1;
-
-    // Cap sizes so nothing overlaps title or bottom
-    imageScale = Math.min(imageScale, 1.5); // smaller max scale
-    noScale = Math.min(noScale, 1.3); // smaller max scale
-
-    minion.style.transform = `scale(${imageScale})`;
-    noBtn.style.transform = `scale(${noScale})`;
+    noScale = Math.min(noScale, 1.3); // max scale
+    moveNoButtonRandomly();
 
     whyText.textContent = reasons[reasonIndex % reasons.length];
     reasonIndex++;
 
-    moveNoButtonRandomly();
-
     popSound.currentTime = 0;
     popSound.play();
+
+    // Increase image width (grows down naturally)
+    const currentWidth = minion.offsetWidth;
+    const newWidth = currentWidth * 1.15; // 15% bigger
+    minion.style.width = Math.min(newWidth, window.innerWidth * 0.8) + "px";
   });
 
   yesBtn.addEventListener("click", () => {
@@ -205,6 +205,7 @@
     }
   }
 
+  // Keep No button inside safe area on resize
   window.addEventListener('resize', () => {
     moveNoButtonRandomly();
   });
