--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Comic Sans MS', cursive;
       text-align: center;
-      background-color: #fde4fd; /* solid pink */
+      background-color: #d3e564; /* solid pink */
       padding-top: 40px;
       overflow: hidden;
       position: relative;
@@ -207,3 +207,4 @@
 
 </body>
 </html>
+
