--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Comic Sans MS', cursive;
       text-align: center;
-      background-color: #649ce5; /* solid pink */
+      background-color: #fde4fd; /* solid pink */
       padding-top: 40px;
       overflow-x: hidden;
     }
@@ -181,3 +181,4 @@
 
 </body>
 </html>
+
