--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 <!-- Sounds -->
 <audio id="popSound" src="pop.mp3"></audio>
-<audio id="valentineSong" src="valentine-song.mp3"></audio>
+<audio id="valentineSong" src="valentine-song.m4a"></audio>
 
 <script>
   const minion = document.getElementById("minion");
@@ -233,3 +233,4 @@
 
 </body>
 </html>
+
