--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background-color: #fde4fd; /* solid pink */
+      background-color: #fde4fd;
       padding-top: 40px;
       overflow-x: hidden;
       position: relative;
@@ -28,8 +28,8 @@
     }
 
     img {
-      width: 200px;       /* base width */
-      max-width: 80vw;    /* responsive for mobile */
+      width: 200px;
+      max-width: 80vw;
       transition: width 0.3s ease, transform 0.3s ease;
       margin-top: 20px;
       display: block;
@@ -53,7 +53,7 @@
       position: relative;
       display: flex;
       justify-content: center;
-      gap: 20px; /* space between buttons */
+      gap: 20px;
       margin-top: 0;
       height: 60px;
     }
@@ -65,7 +65,7 @@
       border-radius: 12px;
       cursor: pointer;
       white-space: nowrap;
-      min-width: 80px; /* fixed rectangle */
+      min-width: 80px;
     }
 
     #yesBtn {
@@ -78,17 +78,23 @@
       color: black;
     }
 
+    /* Confetti */
     .confetti {
       position: fixed;
       width: 8px;
       height: 8px;
-      top: -10px;
-      animation: fall linear infinite;
+      top: 0;
       pointer-events: none;
       border-radius: 50%;
+      animation: fall linear infinite;
     }
 
-    /* Screen shake effect */
+    @keyframes fall {
+      0% { transform: translateY(0) rotate(0deg); }
+      100% { transform: translateY(120vh) rotate(360deg); }
+    }
+
+    /* Shake effect */
     .shake {
       animation: shakeAnim 0.7s;
     }
@@ -107,7 +113,7 @@
       100% { transform: translate(0px, 0px) rotate(0deg); }
     }
 
-    /* Image bounce on Yes */
+    /* Image bounce */
     .bounce {
       animation: bounceAnim 0.5s;
     }
@@ -118,6 +124,30 @@
       50% { transform: scale(0.9); }
       75% { transform: scale(1.1); }
       100% { transform: scale(1); }
+    }
+
+    /* Explosion image container */
+    #explosionContainer {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: none;
+      z-index: 50;
+    }
+
+    #explosionContainer img {
+      width: 200px;
+      max-width: 80vw;
+      border-radius: 20px;
+      box-shadow: 0 0 20px #ff66b2;
+      animation: explodeAnim 1s ease forwards;
+    }
+
+    @keyframes explodeAnim {
+      0% { transform: scale(0.5) rotate(0deg); opacity: 0; }
+      50% { transform: scale(1.5) rotate(180deg); opacity: 1; }
+      100% { transform: scale(1) rotate(360deg); opacity: 1; }
     }
   </style>
 </head>
@@ -137,9 +167,14 @@
   <button id="noBtn">NO 😐</button>
 </div>
 
+<!-- Explosion container for your picture -->
+<div id="explosionContainer">
+  <img id="usPic" src="your-picture.png" alt="Us">
+</div>
+
 <!-- Sounds -->
 <audio id="popSound" src="pop.mp3"></audio>
-<audio id="valentineSong" src="valentine-song.m4a"></audio>
+<audio id="valentineSong" src="valentine-song.mp3"></audio>
 
 <script>
   const minion = document.getElementById("minion");
@@ -149,6 +184,7 @@
   const whyText = document.getElementById("whyText");
   const popSound = document.getElementById("popSound");
   const valentineSong = document.getElementById("valentineSong");
+  const explosionContainer = document.getElementById("explosionContainer");
 
   const reasons = [
     "Why not? 🥺",
@@ -161,50 +197,57 @@
 
   let reasonIndex = 0;
 
-  // Track vertical movement of No button
+  // No button movement
   let noBtnOffsetTop = 0;
-  const moveStep = 20; // pixels to move down per click
+  const moveStep = 20;
 
   noBtn.addEventListener("click", () => {
-    // Increase minion image width naturally
     const currentWidth = minion.offsetWidth;
     const newWidth = currentWidth * 1.15;
     minion.style.width = Math.min(newWidth, window.innerWidth * 0.8) + "px";
 
-    // Move No button down but stay inside viewport
+    // Move down
     noBtnOffsetTop += moveStep;
     const maxTop = window.innerHeight - noBtn.offsetHeight - 50;
     if (noBtnOffsetTop > maxTop) noBtnOffsetTop = maxTop;
     noBtn.style.transform = `translateY(${noBtnOffsetTop}px)`;
 
-    // Update No message
+    // Update message
     whyText.textContent = reasons[reasonIndex % reasons.length];
     reasonIndex++;
 
-    // Play pop sound
     popSound.currentTime = 0;
     popSound.play();
   });
 
   yesBtn.addEventListener("click", () => {
-    // Update Yes message
     message.textContent = "YAY!! 💕🥰 My Valentine!";
     whyText.textContent = "";
 
-    // Shake screen
+    // Shake + minion bounce + confetti + song
     document.body.classList.add('shake');
-    setTimeout(() => document.body.classList.remove('shake'), 700);
-
-    // Bounce minion image
     minion.classList.add('bounce');
-    setTimeout(() => minion.classList.remove('bounce'), 500);
+    launchConfetti(250, 20);
 
-    // Launch more intense confetti
-    launchConfetti(200, 15);
-
-    // Play valentine song
     valentineSong.currentTime = 0;
     valentineSong.play();
+
+    // Remove initial animations
+    setTimeout(() => {
+      document.body.classList.remove('shake');
+      minion.classList.remove('bounce');
+    }, 700);
+
+    // 6-second delayed “explosion” with picture
+    setTimeout(() => {
+      document.body.classList.add('shake'); // shake again
+      explosionContainer.style.display = "block"; // show your picture
+      launchConfetti(300, 25); // extra confetti
+
+      setTimeout(() => {
+        document.body.classList.remove('shake');
+      }, 1000);
+    }, 6000);
   });
 
   function launchConfetti(count = 120, maxSize = 8) {
@@ -214,16 +257,19 @@
       confetti.style.left = Math.random() * 100 + "vw";
       confetti.style.width = Math.random() * maxSize + 5 + "px";
       confetti.style.height = confetti.style.width;
-      confetti.style.backgroundColor =
-        `hsl(${Math.random() * 360}, 100%, 50%)`;
+      confetti.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
+
+      // random start Y
+      const startY = Math.random() * window.innerHeight * -0.5;
+      confetti.style.transform = `translateY(${startY}px)`;
+
       confetti.style.animationDuration = (Math.random() * 1 + 1.5) + "s";
       document.body.appendChild(confetti);
-
       setTimeout(() => confetti.remove(), 4000);
     }
   }
 
-  // Optional: Adjust No button position on window resize
+  // Adjust No button on resize
   window.addEventListener('resize', () => {
     const maxTop = window.innerHeight - noBtn.offsetHeight - 50;
     if (noBtnOffsetTop > maxTop) noBtnOffsetTop = maxTop;
@@ -233,4 +279,3 @@
 
 </body>
 </html>
-
