--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 <!-- Explosion container for your picture -->
 <div id="explosionContainer">
-  <img id="usPic" src="your-picture.png" alt="Us">
+  <img id="usPic" src="your-picture.PNG" alt="Us">
 </div>
 
 <!-- Sounds -->
@@ -279,3 +279,4 @@
 
 </body>
 </html>
+
